; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_i387.c_xfpregs_active.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_i387.c_xfpregs_active.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }
%struct.user_regset = type { i32 }

@cpu_has_fxsr = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xfpregs_active(%struct.task_struct* %0, %struct.user_regset* %1) #0 {
  %3 = alloca %struct.task_struct*, align 8
  %4 = alloca %struct.user_regset*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  store %struct.user_regset* %1, %struct.user_regset** %4, align 8
  %5 = load i64, i64* @cpu_has_fxsr, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %2
  %8 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %9 = call i64 @tsk_used_math(%struct.task_struct* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %7
  %12 = load %struct.user_regset*, %struct.user_regset** %4, align 8
  %13 = getelementptr inbounds %struct.user_regset, %struct.user_regset* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  br label %16

15:                                               ; preds = %7, %2
  br label %16

16:                                               ; preds = %15, %11
  %17 = phi i32 [ %14, %11 ], [ 0, %15 ]
  ret i32 %17
}

declare dso_local i64 @tsk_used_math(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
